--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,17 @@
     <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 </repository>
     <repository>
+        <id>CodeMC</id>
+        <url>https://repo.codemc.org/repository/maven-public</url>
+    </repository>
+    <repository> <!-- for development builds -->
+        <id>sonatype-oss-snapshots</id>
+        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+    </repository>
+    <repository>
+        <id>codemc-repo</id>
+        <url>https://repo.codemc.org/repository/maven-public/</url>
+        <layout>default</layout>
     </repository>
 </repositories>
 
